add video search to Home page

--- a/src/YoutubeAPITest/Views/Home/SearchVideos.cshtml
+++ b/src/YoutubeAPITest/Views/Home/SearchVideos.cshtml
@@ -5,9 +5,56 @@
 }
 @model IList<YoutubeAPITest.Models.Video>
 
-<ul>
     @foreach (var video in Model)
     {
-        <li>@video.Title</li>
+        <div class="col-md-12">
+            <h3>@video.Title - @video.ChannelName</h3>
+            <h5>@video.Description</h5>
+            <iframe id="iframe-player" type="text/html" width="400" height="244"
+                    src='http://www.youtube.com/embed/@video.VideoId?enablejsapi=1'
+                    frameborder="0"></iframe>
+        </div>
     }
-</ul>
+
+<script type="text/javascript">
+  var tag = document.createElement('script');
+  tag.id = 'iframe-demo';
+  tag.src = 'https://www.youtube.com/iframe_api';
+  var firstScriptTag = document.getElementsByTagName('script')[0];
+  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+  var player;
+  function onYouTubeIframeAPIReady() {
+    player = new YT.Player('iframe-player', {
+        events: {
+          'onReady': onPlayerReady,
+          'onStateChange': onPlayerStateChange
+        }
+    });
+  }
+  function onPlayerReady(event) {
+    document.getElementById('iframe-player').style.borderColor = '#FF6D00';
+  }
+  function changeBorderColor(playerStatus) {
+    var color;
+    if (playerStatus == -1) {
+      color = "#37474F"; // unstarted = gray
+    } else if (playerStatus == 0) {
+      color = "#FFFF00"; // ended = yellow
+    } else if (playerStatus == 1) {
+      color = "#33691E"; // playing = green
+    } else if (playerStatus == 2) {
+      color = "#DD2C00"; // paused = red
+    } else if (playerStatus == 3) {
+      color = "#AA00FF"; // buffering = purple
+    } else if (playerStatus == 5) {
+      color = "#FF6DOO"; // video cued = orange
+    }
+    if (color) {
+      document.getElementById('iframe-player').style.borderColor = color;
+    }
+  }
+  function onPlayerStateChange(event) {
+    changeBorderColor(event.data);
+  }
+</script>
